# aligator_cimpc

./: CMakeLists.txt  CompliantContactFwdDynamics.cpp  CompliantContactFwdDynamics.hpp  CompliantContactParameter.hpp  main.cpp  offline_test.cpp  plot_contact_forces.py  test.md  visualize_trajectory.py
config/: parameters.yaml  parameters_walk.yaml
include/: contact_assessment.hpp  contact_force.hpp  contact_fwd_dynamics.hpp  contact_inv_dynamics_residual.hpp  contact_inv_dynamics_residual2.hpp  contact_parameters.hpp  foot_slip_clearance_cost.hpp  gait_phase_alignment.hpp  interpolator.hpp  kinematics_ode.hpp  logger.hpp  relaxed_wbc.hpp  symmetric_control_residual.hpp  timer.hpp  webots_interface.hpp  yaml_loader.hpp
log/: q.csv  q0.csv  q_guess.csv  q_nom.csv  tau.csv  tau_guess.csv  v.csv  v0.csv  v_guess.csv  v_nom.csv
plot/: plot_contact_force.py  plot_cost.py  plot_data.py  plot_q.py  visualize_trajectory.py
robot/bqr3/: bqr3.urdf
robot/galileo_v1d6_description/urdf/: galileo_v1d6.urdf
robot/mini_cheetah/urdf/: mini_cheetah_ground_mesh.urdf
src/: contact_force.cpp  contact_fwd_dynamics.cpp  contact_inv_dynamics_residual.cpp  contact_inv_dynamics_residual2.cpp  foot_slip_clearance_cost.cpp  gait_phase_alignment.cpp  interpolator.cpp  main.cpp  relaxed_wbc.cpp  symmetric_control_residual.cpp  webots_interface.cpp
test/: contact_fwd_dynamics_test.cpp  contact_inv_dynamics_test.cpp  contact_test.cpp  cost_comparation.cpp  cppad_test.cpp  foot_slip_clearance_cost_test.cpp  interpolator_test.cpp  inv_dynamics_test.cpp  offline_fwd_dyn_test.cpp  offline_inv_dyn_test.cpp  offline_test.cpp  soft_gait.cpp  symmetric_control_residual_test.cpp
